# ombra-chat

./: .gitignore  CHANGELOG.md  COPYING  README.md  package-lock.json  package.json  picture.html  pom.xml
.github/workflows/: github_release.yaml
docker/: Dockerfile
lib/: module-info.java  patch-modules.sh
src/: AboutModal.vue  App.vue  ChatFolders.vue  ChatPage.vue  ChatSettingsModal.vue  ChatsList.vue  CreateFolderPanel.vue  EditFolderPanel.vue  EncryptionPassword.vue  FoldersModal.vue  Main.vue  MessageModal.vue  SettingsModal.vue  Sidebar.vue  model.ts  store.ts
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/src/: lib.rs  main.rs  settings.rs  state.rs  store.rs  thumbnails.rs
src-tauri/src/commands/: chats.rs  files.rs  folders.rs  init.rs  login.rs  mod.rs  pgp.rs  telegram.rs
src-tauri/src/crypto/: gpg.rs  mod.rs  pgp.rs  utils.rs
src-tauri/src/telegram/: chats.rs  client.rs  effects.rs  folders.rs  messages.rs  mod.rs  users.rs
src/components/: Dropdown.vue
src/login/: AuthenticationCode.vue  AuthenticationPassword.vue  PhoneNumber.vue
src/main/java/: module-info.java
src/main/resources/: version.properties
src/messages/: AnimatedEmojiMessage.vue  DocumentMessage.vue  MessageBubble.vue  NotSupportedMessage.vue  PgpDocumentMessage.vue  PgpKeyMessage.vue  PgpTextMessage.vue  PhotoMessage.vue  TextMessage.vue  VoiceNoteMessage.vue
src/services/: chats.ts  effects.ts  files.ts  folders.ts  keys.ts  pgp.ts  users.ts
src/settings/: InitialConfiguration.vue  settings.ts
(+130 files in other folders)
