[package]
name = "ombra-chat"
version = "0.3.0"
description = "Privacy-boosted Telegram desktop client with PGP magic"
authors = ["Sonia Zorba"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
# The `_lib` suffix may seem redundant but it is necessary
# to make the lib name unique and wouldn't conflict with the bin name.
# This seems to be only an issue on Windows, see https://github.com/rust-lang/cargo/issues/8519
name = "ombra_chat_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-opener = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"

tdlib = { path = "../../tdlib-rs/tdlib" }
tauri-plugin-store = "2"
tauri-plugin-dialog = "2"
rand = "0.8.5"
log = "0.4.27"
env_logger = "0.11.8"
trpl = "0.2.0"
pgp = "0.16.0"
pbkdf2 = "0.12.2"
hex = "0.4.3"
sha2 = "0.10.9"
base64 = "0.22.1"
mime = "0.3.17"
image = "0.25.6"
